	* Fix plot range field not being updated (Issue #603)
	* Fix wrong axis tick type used (Issue #571)
	* Fix wrong infoelement position when removing active curve (Issue #666)
	* Fix copying Elements (Issue #622)
	* Fix calculating skewness and kurtosis
	* Support start/end row/column in XLSX import preview
	* Fixed wrong string to load CANSettings

Internal:
	* Switch from C++11 to C++17
	* Support Qt6
	* Reduce code duplication caused by multiple plot types (Issue #540)
	* Update included QXlsx to 1.4.6
	* Build separate libraries for backend, nsl and everything and link
	only when needed in tests
	* Log skipped tests

-----2.10.1 (12.07.2023) -----
Bug fixes:
	* Support markdown library discount version 3
	* Improve Vector BLF dependency (git download must be enabled if needed)
	* Correctly use system header of system QXlsx (BUG 468651)
	* Fix group separator problem in formulas (BUG 468098)
	* Improve log scales (auto scaling and tick number)
	* Improve auto scale (Issue #536)
	* Fix limits when changing scale (Issue #446)
	* Use system liborigin headers if linking against system liborigin (BUG 469367)
	* Don't clear the undo history when saving the project (BUG 470727)
	* Properly react on orientation changes in the worksheet properties explorer
	* In the collections of example projects, color maps and data sets allow also to search for sub-strings and do the search case-insensitive
	* Properly save and load the property "visible" for box and bar plots in the project file
	* Fixed copy&paste and duplication of box and bar plots
	* .xlsx import:
		* Fix crash importing empty cells
		* support datetime import (Issue #531)
	* Properly set the initial properties of the reference line like line width, etc. (Issue #580)
	* Properly show the initial value of the property "visible" for the reference range (Issue #582)
	* React of Delete and Backspace keys to delete selected cells in spreadsheet columns (Issue #596)