@@ -3,7 +3,7 @@
 	Project              : LabPlot
 	Description          : Background
 	--------------------------------------------------------------------
-	SPDX-FileCopyrightText: 2022 Alexander Semke <alexander.semke@web.de>
+	SPDX-FileCopyrightText: 2022-2024 Alexander Semke <alexander.semke@web.de>
 	SPDX-License-Identifier: GPL-2.0-or-later
 */
 
@@ -22,6 +22,7 @@
 
 #include <KConfigGroup>
 #include <KLocalizedString>
+#include <QPainter>
 
 Background::Background(const QString& name)
 	: AbstractAspect(name, AspectType::AbstractAspect)
@@ -65,6 +66,100 @@ void Background::init(const KConfigGroup& group) {
 
 	if (d->positionAvailable)
 		d->position = (Position)group.readEntry(d->prefix + QStringLiteral("Position"), static_cast<int>(Position::No));
+}
+
+void Background::draw(QPainter* painter, const QPolygonF& polygon) const {
+	Q_D(const Background);
+	const QRectF& rect = polygon.boundingRect();
+
+	// brush
+	if (d->type == Background::Type::Color) {
+		switch (d->colorStyle) {
+		case Background::ColorStyle::SingleColor: {
+			painter->setBrush(QBrush(d->firstColor));
+			break;
+		}
+		case Background::ColorStyle::HorizontalLinearGradient: {
+			QLinearGradient linearGrad(rect.topLeft(), rect.topRight());
+			linearGrad.setColorAt(0, d->firstColor);
+			linearGrad.setColorAt(1, d->secondColor);
+			painter->setBrush(QBrush(linearGrad));
+			break;
+		}
+		case Background::ColorStyle::VerticalLinearGradient: {
+			QLinearGradient linearGrad(rect.topLeft(), rect.bottomLeft());
+			linearGrad.setColorAt(0, d->firstColor);
+			linearGrad.setColorAt(1, d->secondColor);
+			painter->setBrush(QBrush(linearGrad));
+			break;
+		}
+		case Background::ColorStyle::TopLeftDiagonalLinearGradient: {
+			QLinearGradient linearGrad(rect.topLeft(), rect.bottomRight());
+			linearGrad.setColorAt(0, d->firstColor);
+			linearGrad.setColorAt(1, d->secondColor);
+			painter->setBrush(QBrush(linearGrad));
+			break;
+		}
+		case Background::ColorStyle::BottomLeftDiagonalLinearGradient: {
+			QLinearGradient linearGrad(rect.bottomLeft(), rect.topRight());
+			linearGrad.setColorAt(0, d->firstColor);
+			linearGrad.setColorAt(1, d->secondColor);
+			painter->setBrush(QBrush(linearGrad));
+			break;
+		}
+		case Background::ColorStyle::RadialGradient: {
+			QRadialGradient radialGrad(rect.center(), rect.width() / 2);
+			radialGrad.setColorAt(0, d->firstColor);
+			radialGrad.setColorAt(1, d->secondColor);
+			painter->setBrush(QBrush(radialGrad));
+			break;
+		}
+		}
+	} else if (d->type == Background::Type::Image) {
+		if (!d->fileName.trimmed().isEmpty()) {
+			QPixmap pix(d->fileName);
+			switch (d->imageStyle) {
+			case Background::ImageStyle::ScaledCropped:
+				pix = pix.scaled(rect.size().toSize(), Qt::KeepAspectRatioByExpanding, Qt::SmoothTransformation);
+				painter->setBrush(QBrush(pix));
+				painter->setBrushOrigin(pix.size().width() / 2, pix.size().height() / 2);
+				break;
+			case Background::ImageStyle::Scaled:
+				pix = pix.scaled(rect.size().toSize(), Qt::IgnoreAspectRatio, Qt::SmoothTransformation);
+				painter->setBrush(QBrush(pix));
+				painter->setBrushOrigin(pix.size().width() / 2, pix.size().height() / 2);
+				break;
+			case Background::ImageStyle::ScaledAspectRatio:
+				pix = pix.scaled(rect.size().toSize(), Qt::KeepAspectRatio, Qt::SmoothTransformation);
+				painter->setBrush(QBrush(pix));
+				painter->setBrushOrigin(pix.size().width() / 2, pix.size().height() / 2);
+				break;
+			case Background::ImageStyle::Centered: {
+				QPixmap backpix(rect.size().toSize());
+				backpix.fill();
+				QPainter p(&backpix);
+				p.drawPixmap(QPointF(0, 0), pix);
+				p.end();
+				painter->setBrush(QBrush(backpix));
+				painter->setBrushOrigin(-pix.size().width() / 2, -pix.size().height() / 2);
+				break;
+			}
+			case Background::ImageStyle::Tiled:
+				painter->setBrush(QBrush(pix));
+				break;
+			case Background::ImageStyle::CenterTiled:
+				painter->setBrush(QBrush(pix));
+				painter->setBrushOrigin(pix.size().width() / 2, pix.size().height() / 2);
+			}
+		}
+	} else if (d->type == Background::Type::Pattern)
+		painter->setBrush(QBrush(d->firstColor, d->brushStyle));
+
+	// pen and opacity
+	painter->setOpacity(d->opacity);
+	painter->setPen(Qt::NoPen);
+
+	painter->drawPolygon(polygon);
 }
 
 // ##############################################################################
