@@ -722,87 +722,7 @@ void WorksheetView::drawForeground(QPainter* painter, const QRectF& rect) {
 
 void WorksheetView::drawBackgroundItems(QPainter* painter, const QRectF& scene_rect) {
 	// canvas
-	const auto* background = m_worksheet->background();
-	painter->setOpacity(background->opacity());
-	if (background->type() == Background::Type::Color) {
-		switch (background->colorStyle()) {
-		case Background::ColorStyle::SingleColor: {
-			painter->setBrush(QBrush(background->firstColor()));
-			break;
-		}
-		case Background::ColorStyle::HorizontalLinearGradient: {
-			QLinearGradient linearGrad(scene_rect.topLeft(), scene_rect.topRight());
-			linearGrad.setColorAt(0, background->firstColor());
-			linearGrad.setColorAt(1, background->secondColor());
-			painter->setBrush(QBrush(linearGrad));
-			break;
-		}
-		case Background::ColorStyle::VerticalLinearGradient: {
-			QLinearGradient linearGrad(scene_rect.topLeft(), scene_rect.bottomLeft());
-			linearGrad.setColorAt(0, background->firstColor());
-			linearGrad.setColorAt(1, background->secondColor());
-			painter->setBrush(QBrush(linearGrad));
-			break;
-		}
-		case Background::ColorStyle::TopLeftDiagonalLinearGradient: {
-			QLinearGradient linearGrad(scene_rect.topLeft(), scene_rect.bottomRight());
-			linearGrad.setColorAt(0, background->firstColor());
-			linearGrad.setColorAt(1, background->secondColor());
-			painter->setBrush(QBrush(linearGrad));
-			break;
-		}
-		case Background::ColorStyle::BottomLeftDiagonalLinearGradient: {
-			QLinearGradient linearGrad(scene_rect.bottomLeft(), scene_rect.topRight());
-			linearGrad.setColorAt(0, background->firstColor());
-			linearGrad.setColorAt(1, background->secondColor());
-			painter->setBrush(QBrush(linearGrad));
-			break;
-		}
-		case Background::ColorStyle::RadialGradient: {
-			QRadialGradient radialGrad(scene_rect.center(), scene_rect.width() / 2);
-			radialGrad.setColorAt(0, background->firstColor());
-			radialGrad.setColorAt(1, background->secondColor());
-			painter->setBrush(QBrush(radialGrad));
-			break;
-		}
-			// default:
-			//	painter->setBrush(QBrush(m_worksheet->backgroundFirstColor()));
-		}
-		painter->drawRect(scene_rect);
-	} else if (background->type() == Background::Type::Image) { // background image
-		const QString& backgroundFileName = background->fileName().trimmed();
-		if (!backgroundFileName.isEmpty()) {
-			QPixmap pix(backgroundFileName);
-			switch (background->imageStyle()) {
-			case Background::ImageStyle::ScaledCropped:
-				pix = pix.scaled(scene_rect.size().toSize(), Qt::KeepAspectRatioByExpanding, Qt::SmoothTransformation);
-				painter->drawPixmap(scene_rect.topLeft(), pix);
-				break;
-			case Background::ImageStyle::Scaled:
-				pix = pix.scaled(scene_rect.size().toSize(), Qt::IgnoreAspectRatio, Qt::SmoothTransformation);
-				painter->drawPixmap(scene_rect.topLeft(), pix);
-				break;
-			case Background::ImageStyle::ScaledAspectRatio:
-				pix = pix.scaled(scene_rect.size().toSize(), Qt::KeepAspectRatio, Qt::SmoothTransformation);
-				painter->drawPixmap(scene_rect.topLeft(), pix);
-				break;
-			case Background::ImageStyle::Centered:
-				painter->drawPixmap(QPointF(scene_rect.center().x() - pix.size().width() / 2, scene_rect.center().y() - pix.size().height() / 2), pix);
-				break;
-			case Background::ImageStyle::Tiled:
-				painter->drawTiledPixmap(scene_rect, pix);
-				break;
-			case Background::ImageStyle::CenterTiled:
-				painter->drawTiledPixmap(scene_rect, pix, QPoint(scene_rect.size().width() / 2, scene_rect.size().height() / 2));
-				break;
-				// default:
-				//	painter->drawPixmap(scene_rect.topLeft(),pix);
-			}
-		}
-	} else if (background->type() == Background::Type::Pattern) { // background pattern
-		painter->setBrush(QBrush(background->firstColor(), background->brushStyle()));
-		painter->drawRect(scene_rect);
-	}
+	m_worksheet->background()->draw(painter, scene_rect);
 
 	// grid
 	if (m_gridSettings.style != GridStyle::NoGrid && !m_isPrinting) {
